namespace ABSTRACTIONS.Entities
{
    public interface IEntity
    {
        int Id { get; }
    }
}
