namespace DOMAIN.Features.Permisos
{
    public static class CodigosPermiso
    {
        // Codigos estables usados por el sistema para validar accesos.
        public const string UsuariosVer = "USUARIOS_VER";
        public const string UsuariosCrear = "USUARIOS_CREAR";
        public const string UsuariosEditar = "USUARIOS_EDITAR";
        public const string UsuariosEliminar = "USUARIOS_ELIMINAR";

        public const string PermisosVer = "PERMISOS_VER";
        public const string PermisosCrear = "PERMISOS_CREAR";
        public const string PermisosEditar = "PERMISOS_EDITAR";
        public const string PermisosEliminar = "PERMISOS_ELIMINAR";
        public const string PermisosComponer = "PERMISOS_COMPONER";
        public const string PermisosAsignarUsuarios = "PERMISOS_ASIGNAR_USUARIOS";

        public const string IdiomasVer = "IDIOMAS_VER";
        public const string IdiomasCambiar = "IDIOMAS_CAMBIAR";
        public const string IdiomasCrear = "IDIOMAS_CREAR";
        public const string IdiomasEditar = "IDIOMAS_EDITAR";
        public const string IdiomasEliminar = "IDIOMAS_ELIMINAR";

        public const string TraduccionesVer = "TRADUCCIONES_VER";
        public const string TraduccionesCrear = "TRADUCCIONES_CREAR";
        public const string TraduccionesEditar = "TRADUCCIONES_EDITAR";
        public const string TraduccionesEliminar = "TRADUCCIONES_ELIMINAR";
    }
}
